# src/groups/dto/update-group-nickname.dto.ts
@@ -1,0 +1,7 @@
+import { IsString, MaxLength } from 'class-validator';
+
+export class UpdateGroupNicknameDto {
+  @IsString()
+  @MaxLength(80)
+  nickname!: string;
+}
